<resources>
    <string name="map_api_key0" translatable="false">@string/MAP_API_KEY</string>
    <string name="_DP_HOST_NAME" translatable="false">@string/DP_HOST_NAME</string>
    <string name="_DP_STORE_MESSAGE" translatable="false">@string/DP_STORE_MESSAGE</string>
    <string name="_DP_PRODUCT_MESSAGE" translatable="false">@string/DP_PRODUCT_MESSAGE</string>
    <string name="Home">Home</string>
    <string name="ManageThings">Manage Your Business</string>
    <string name="forgotpassword">&lt;u>Forgot password ?&lt;/u></string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="oups_no_item_found">Oups !! No item found</string>
    <string name="about">About Us </string>
    <string name="Favoris">Favorites</string>
    <string name="FindCustomers">People around me</string>
    <string name="About_us">About US</string>
    <string name="Settings">Settings</string>
    <string name="MapStores">Store locator</string>
    <string name="Login">Login</string>
    <string name="Logout">LogOut</string>
    <string name="parameter">Parameter</string>
    <string name="title_activity_map_marker_position">Map</string>
    <string name="close">Close</string>
    <string name="categories">Categories</string>
    <string name="my_stores">"My stores</string>
    <string name="Categories">Categories</string>
    <string name="check_network" translatable="false">Check your network</string>
    <string name="network_error">No Network! click to retry</string>
    <string name="check_nework">Check your network connection</string>
    <string name="enable_network">Enable network connection in your device</string>
    <string name="editProfile">Edit Profile</string>
    <string name="store_to_far_map">Too far to display the route</string>
    <string name="store_call_error">Error in your phone call</string>
    <string name="store_title_detail">Store Detail</string>
    <string name="settings_notifications">NOTIFICATIONS</string>
    <string name="settings_app_infos">APPLICATION</string>
    <string name="settings_notification_products">Receive a special products notification</string>
    <string name="settings_notification_products_title">Product notifications</string>
    <string name="settings_notification_stores">Receive notification when there is a store near you</string>
    <string name="settings_notification_stores_title">Nearby stores notifications</string>
    <string name="settings_notification_messenger">Receive notification when there is new messages</string>
    <string name="settings_notification_messenger_title">Messenger notifications</string>
    <string name="settings_app_infos_title">Version of application</string>
    <string name="insert_name_field">Full name </string>
    <string name="lessThan1km">Less than 1 km</string>
    <string name="MoreThan2km">+2 Km</string>
    <string name="MoreThan5km">+5 Km</string>
    <string name="MoreThan10km">+10 Km</string>
    <string name="description">Description</string>
    <string name="permission_disabled_notice">This app is designed to work with location permission if you cancel this permission you may subsequently find operating problems</string>
    <string name="signup_number">Mobile number</string>
    <string name="signup_select_your_country">Select your country</string>
    <string name="login_username">Email or username</string>
    <string name="password_atleast_6_8_characters_long">Password</string>
    <string name="save">Save</string>
    <string name="find_new_neighbours">Find new neighbours</string>
    <string name="youHaveDiscussions">You have %1$d discissions %2$d messages</string>
    <string name="youHaveMessage">You have new message</string>
    <string name="productIn"> %1$s</string>
    <string name="products">Products</string>
    <string name="reviews">Reviews (%1$s)</string>
    <string name="noProduct">No Product found</string>
    <string name="detailProduct">Detail product</string>
    <string name="noReviews">No Reviews found</string>
    <string name="addReview">Add Review</string>
    <string name="settings">Settings</string>
    <string name="pseudo">Username</string>
    <string name="error">Whooops!</string>
    <string name="selectRating">Please select from 1 star to 5 star</string>
    <string name="pleaseWriteReview">Please write review</string>
    <string name="writeReview">Write review</string>
    <string name="thankYou">Thank you!</string>
    <string name="searchOn" translatable="false">Search for location , address , detail </string>
    <string name="pconfirm">Password confirmation</string>
    <string name="email">Email</string>
    <string name="people_around_me">People around me</string>
    <string name="promo">PROMO</string>
    <string name="fileUploading">Uploading …</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="rateUs">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="you_ve_already_reviewd">You have already add your review!</string>
    <string name="shared_text">%1$s - Only on %2$s \n %3$s</string>
    <string name="reload">Reload</string>
    <string name="mail">Mail</string>
    <string name="today">Today</string>
    <string name="Send_message">Send a message</string>
    <string name="create_an_account">Create an account</string>
    <string name="Sign_in">Sign in</string>
    <string name="password_hint">Password</string>
    <string name="version">version :</string>
    <string name="phone">Phone</string>
    <string name="app_privacy">Privacy Policy</string>
    <string name="app_term_of_uses">Terms of use</string>
    <string name="product_start_at">Start at %1$s</string>
    <string name="product_end_at">End at %1$s</string>
    <string name="product_ended_at">Ended at %1$s</string>
    <string name="tab_stores">Stores</string>
    <string name="tab_products">Product</string>
    <string name="tab_inbox">Inbox</string>
    <string name="your_destination">Your Destination</string>
    <string name="refresh">Refresh</string>
    <string name="no_users">No users</string>
    <string name="sign_up">Sign up</string>
    <string name="chat_notification_title">You have a new message</string>
    <string name="authentification_error_msg">Username and Password are incorrect.</string>
    <string name="gallery">Gallery</string>
    <string name="noImages">No Photos</string>
    <string name="enable_network_map_direction">Please enable your network</string>
    <string name="enable_gps_map_direction">Please enable your GPS first</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="intro_slide_1_title">Quickly </string>
    <string name="intro_slide_1_description">Try different restaurants nearby , a map will guide you the route to get the most interesting product deals </string>
    <string name="intro_slide_3_title">Stores Nearby</string>
    <string name="intro_slide_3_description"> Product, promo, discount are always at your discretion to explore for each near store .</string>
    <string name="intro_slide_4_title">Rate your best store</string>
    <string name="intro_slide_4_description"> Explore feedbacks before patronizing any store and leave yours as well</string>
    <string name="alert_gps_dialog">You Need to allow access to location in order to use the app , please try again and hit OK </string>
    <string name="confirm_gps_relaunch">Try again</string>
    <string name="next">Next</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="less_than_1_km">Less than 1 km</string>
    <string name="noDiscussions">No Discussion</string>
    <string name="network_not_available">Couldn\'t load data from server</string>
    <string name="retry">Retry</string>
    <string name="MapStoresMenu">Geo Stores</string>
    <string name="review_title">Reviews</string>
    <string name="load_more">Load More</string>
    <string name="logout_alert">Your account is logged out, that because your account is blocked or deleted\nMore information contact the admin</string>
    <string name="store_not_found">Not found!</string>
    <string name="notification">Notifications</string>
    <string name="msg_dialog_privacy_policy"> By using this App, you agree to be bound by the %1$s and %2$s .</string>
    <string name="privacy_and_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="product_off">%1$s OFF</string>
    <string name="for_only">For only %1$s</string>
    <string name="no_message_inbox">No messages in your inbox yet! Start chatting with your friends</string>
    <string name="no_message_yet">No Message, yet</string>
    <string name="select_category">Select category</string>
    <string name="current_location">Current Location</string>
    <string name="location">Location:</string>
    <string name="required_field">* Required field</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="statusID">Order #%1$d</string>
    <string name="orders">Orders</string>
    <string name="product_qty">Qty : %1$d</string>
    <string name="your_order_has_been_sent_successfully">Your order has been sent successfully!</string>
    <string name="order_qty">Qty : %1$d</string>
    <string name="order_detail">Detail</string>
    <string name="username">Username</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="do_you_want_to_change_your_location">Do you want to change your location ?</string>
    <string name="change_location">Change location</string>
    <string name="recent_products">Recent Products</string>
    <string name="show_more">Show All</string>
    <string name="searchOnMaps">Search on map</string>
    <string name="complet_required_fileds">Make sure to complete the required fields first!</string>
    <string name="pay_now">Pay Now</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="payment_error">Error in payment</string>
    <string name="error_try_later">Something went wrong, please try later!</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="login_create_account">Log In / Create Account</string>
    <string name="checkout">Checkout</string>
    <string name="dp_view_store_on">View the store on Indukaan</string>
    <string name="dp_view_product_on">View the product on Indukaan</string>
    <string name="clear_search">Clear</string>
    <string name="subtotal">Subtotal</string>
    <string name="quantity">Quantity</string>
    <string name="date_filtre">Recent</string>
    <string name="geo_Filter">Nearby</string>
    <string name="ends_in">"Ends in : "</string>
    <string name="day">" Days "</string>
    <string name="percent">Percent</string>
    <string name="price">Price</string>
    <string name="order_detail_checkout">ORDER DETAIL</string>
    <string name="order_total">ORDER TOTAL</string>
    <string name="keep_current_location">Keep current location</string>
    <string name="order_by_geo">Nearby</string>
    <string name="order_by_recent">Recent</string>
    <string name="tab_offers">Offers</string>
    <string name="write_name_address_city">Write Name , Address , City</string>
    <string name="radius">Radius:</string>
    <string name="sms_code">SMS code</string>
    <string name="resent_verif_code">Resent verification code</string>
    <string name="phone_sms_verification">Phone SMS verification</string>
    <string name="settings_notification_distance_dis">%1$s %2$s</string>
</resources>