<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/searchBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="title search "
            android:textColor="@color/defaultBlackColor"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_80"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:text="@string/current_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="vertical">

            <!-- Category list horizontal scroll view   -->
            <com.geogreenapps.apps.indukaan.customview.CategoryCustomView
                android:id="@+id/rectCategoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ccClickRedirection="false"
                app:ccDisplayStoreNumber="false"
                app:ccDisplayTitle="true"
                app:ccLoader="false"
                app:ccRect="true" />
            <!--End :  Integrate new category section for filter-->

        </LinearLayout>


        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/searchOn"
            android:inputType="text"
            android:lines="1"
            android:textSize="15sp"
            app:met_baseColor="@color/grey_90"
            app:met_errorColor="@color/red"
            app:met_primaryColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/md"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_distance_dis"
                android:textColor="@color/defaultBlackColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:progress="30"
                android:progressTint="@color/colorPrimary"
                android:splitTrack="true"
                android:thumbTint="@color/colorPrimary" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/doSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_color_btn_order"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>