<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <LinearLayout
                    android:id="@+id/infos_layout"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/phone_sms_verification"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="visible" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/connect_layout"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/sms_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/sms_code"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey_field"
                        app:met_baseColor="@color/black"
                        app:met_errorColor="@color/red"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_textColorHint="@color/grey_field" />


                </LinearLayout>


                <Button
                    android:id="@+id/confirm"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gradient_color_btn"
                    android:text="@string/confirm"
                    android:textColor="@color/defaultWhiteColor"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/resendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/resent_verif_code"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>